fixed header positioning on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,16 @@ body {
 .nav-heading {
     margin: 30px 0 20px;
 }
+.container > .navbar-header {
+    margin-left: 0;
+}
 #nav-collapse {
     margin-top: 30px;
+}
+@media (max-width: 768px) {
+    #nav-collapse {
+        margin-top: 0;
+    }
 }
 .footer {
     position: absolute;
